--- a/primera-clase/src/app/app.component.html
+++ b/primera-clase/src/app/app.component.html
@@ -2,6 +2,6 @@
 
 <a routerLink="/login">Login</a>
 <br><a routerLink="/bienvenida">Bienvenida</a>
-<br><a routerLink="/error">Error</a>
+<br><a routerLink="/Ejercicio01">Ejercicio01</a>
 
 <router-outlet></router-outlet>
